@@ -594,14 +594,6 @@ NSUInteger
 GSPrivateThreadID()
   GS_ATTRIB_PRIVATE;
 
-/* Used by NSThread.m to inform NSLock.m that normal locks should be
- * traced (and therefore call private NSThread methods to perform the
- * tracing.
- */
-void
-GSPrivateTraceLocks(BOOL aFlag)
-  GS_ATTRIB_PRIVATE;
-
 /** Function to base64 encode data.  The destination buffer must be of
  * size (((length + 2) / 3) * 4) or more.
  */
